# agentic-ifs

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
api/: README.md  app.py  models.py  store.py
api/routers/: dynamics.py  export.py  graph.py  parts.py  sessions.py  workflow.py
demo/: README.md  app.py  models.py  store.py
demo/routers/: dynamics.py  export.py  graph.py  parts.py  sessions.py  workflow.py
notebooks/: 01_parts_and_system.ipynb  02_protection_graph.ipynb  03_six_fs_workflow.ipynb  04_blending_dynamics.ipynb  05_full_scenario.ipynb  06_dialogue.ipynb  07_unburdening.ipynb
spec/: IFSKit-Spec.md
spec/research/: Ecosystem-Gaps-PsychAI.md  IFS-Self-Energy-Baseline.md  IFSKit-Concept-Mapping.md  IFSKit-Research.md
src/agentic_ifs/: __init__.py  dialogue.py  dynamics.py  graph.py  modifiers.py  parts.py  self_system.py  session.py  somatic.py  unburdening.py  workflow.py
src/agentic_ifs/integrations/: __init__.py  anthropic.py  google.py
tests/: conftest.py  test_dialogue.py  test_dynamics.py  test_graph.py  test_modifiers.py  test_parts.py  test_self_system.py  test_session.py  test_somatic.py  test_unburdening.py  test_workflow.py
