[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-ifs"
version = "0.2.0"
description = "Internal Family Systems as multi-agent computational architecture"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Joe Jarlett", email = "joe@joejarlett.co.uk" }]
requires-python = ">=3.11"
keywords = ["ifs", "internal-family-systems", "psychology", "multi-agent", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "python-dotenv>=1.0",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
google = [
    "google-genai>=1.0",
]
anthropic = [
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://github.com/joejarlett/agentic-ifs"
Repository = "https://github.com/joejarlett/agentic-ifs"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_ifs"]

[tool.ruff]
target-version = "py311"
line-length = 88
